--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- faveIcon -->
     <link rel="shortcut icon" href="https://cdn2.iconfinder.com/data/icons/weather-flat-14/64/weather02-512.png">
     <!-- css link -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <main class="wrapper">
